@@ -445,7 +445,7 @@ SpellChecker::Result AspellChecker::check(WordLangTuple const & word,
 		if (it->lang()->code() != word.lang()->code())
 			continue;
 		if (it->word() == word.word())
-			return LEARNED_WORD;
+			return DOCUMENT_LEARNED_WORD;
 	}
 	SpellChecker::Result rc = d->check(m, word);
 	return (rc == WORD_OK && d->learned(word)) ? LEARNED_WORD : rc;
