@@ -70,8 +70,7 @@ struct HunspellChecker::Private
 	Hunspell * speller(Language const * lang);
 	Hunspell * lookup(Language const * lang);
 	/// ignored words
-	bool isIgnored(WordLangTuple const & wl,
-		       std::vector<WordLangTuple> const & docdict) const;
+	bool isIgnored(WordLangTuple const & wl) const;
 	/// personal word list interface
 	void remove(WordLangTuple const & wl);
 	void insert(WordLangTuple const & wl);
@@ -282,18 +281,10 @@ int HunspellChecker::Private::numDictionaries() const
 }
 
 
-bool HunspellChecker::Private::isIgnored(WordLangTuple const & wl,
-					 vector<WordLangTuple> const & docdict) const
+bool HunspellChecker::Private::isIgnored(WordLangTuple const & wl) const
 {
 	IgnoreList::const_iterator it = ignored_.begin();
 	for (; it != ignored_.end(); ++it) {
-		if (it->lang()->code() != wl.lang()->code())
-			continue;
-		if (it->word() == wl.word())
-			return true;
-	}
-	it = docdict.begin();
-	for (; it != docdict.end(); ++it) {
 		if (it->lang()->code() != wl.lang()->code())
 			continue;
 		if (it->word() == wl.word())
@@ -356,8 +347,16 @@ HunspellChecker::~HunspellChecker()
 SpellChecker::Result HunspellChecker::check(WordLangTuple const & wl,
 					    vector<WordLangTuple> const & docdict)
 {
-	if (d->isIgnored(wl, docdict))
+	if (d->isIgnored(wl))
 		return WORD_OK;
+
+	IgnoreList::const_iterator it = docdict.begin();
+	for (; it != docdict.end(); ++it) {
+		if (it->lang()->code() != wl.lang()->code())
+			continue;
+		if (it->word() == wl.word())
+			return DOCUMENT_LEARNED_WORD;
+	}
 
 	Hunspell * h = d->speller(wl.lang());
 	if (!h)
